<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>testJunit3</groupId>
  <artifactId>testJunit3</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <junit-platform.version>5.7.0</junit-platform.version>
    </properties>
  
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
	<dependency>
	  <groupId>org.junit.jupiter</groupId>
	  <artifactId>junit-jupiter-params</artifactId>
	  <version>${junit-platform.version}</version>
	  <scope>test</scope>
	</dependency>
	<dependency>
	  <groupId>org.junit.platform</groupId>
	  <artifactId>junit-platform-runner</artifactId>
	  <version>1.8.2</version>
	  <scope>test</scope>
	</dependency>

    </dependencies> 
  
    <build>

        <sourceDirectory>src</sourceDirectory>
        <!-- source test of the package -->
        <testSourceDirectory>test</testSourceDirectory>


      <!--<sourceDirectory>src/main/java/packJunit</sourceDirectory>-->
     <!-- <testSourceDirectory>src/test/java/packJunit</testSourceDirectory> -->
      <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
					<includes>
					    <include>**/Test*.java</include>
					    <include>**/*Test*.java</include>
					    <include>**/*Tests.java</include>
					</includes>
                  <testFailureIgnore>
                      true
                  </testFailureIgnore>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
      </pluginManagement>
  </build>
</project>